# Project37a

./: .gitignore  Cargo.toml
src/: config.rs  filter.rs  gmail_hub.rs  llm_extract.rs  main.rs  message_db.rs  message_processor.rs  pdf_extract.rs  simple_refresh.rs  simplestore.rs
src/heuristics/: generic.rs  mod.rs
