[package]
name = "invoice_search"
version = "0.1.0"
edition = "2024"

# Cargo.toml
[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
google-gmail1 = "7"
yup-oauth2 = "12.0"  # <- Change this from 8.0 to 11.0
hyper-rustls = { version = "0.27", features = ["webpki-roots", "ring"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.23.36"
async-trait = "0.1"
time = "0.3.46"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11+spec-1.1.0"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"
toml_edit = "0.24.0"
